2007-07-17  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_configure.erl: Bugfix: Show only virtual host users
	on admin disco for all users (EJAB-268) (Thanks to Badlop).

	* src/mod_muc/mod_muc_log.erl: Recognise more URI schemes in
	logged HTML (EJAB-279) (Thanks to qu1j0t3).

	* src/ejabberd_s2s_out.erl: Improved place of the INFO /
	DEBUG printout.

	* src/odbc/ejabberd_odbc.erl: Better error handling for MySQL
	native driver (EJAB-224).

2007-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added remove_connection/3
	* src/ejabberd_s2s_out.erl: Bugfix: remove only own s2s record

2007-07-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Bounce packets after unregistering s2s
	connection, not before

2007-07-11  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_echo.erl: mod_echo does not reply to other
	components. This is to make sure that a component will not
	discover its own capabilities (Thanks to Badlop) (EJAB-281).
	* src/ejabberd.cfg: disable mod_echo in the example config
	file. mod_echo is mainly a development/test module.

2007-07-09  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/mssql.sql: Nickname cannot be null in rosterusers table
	(MSSQL)
	* src/odbc/mysql.sql: Likewise
	* src/odbc/pg.sql: Likewise

2007-06-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_config.erl: Normalize hostnames in config file. If mixed
	case is used, the hostname will be now useable (EJAB-277).
	* src/stringprep/stringprep_sup.erl: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/stringprep/Makefile.win32: Likewise
	* src/ejabberd_app.erl: Likewise

2007-06-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_anonymous.erl: Do not purge non anonymous accounts
	when using anonymous authentication with another type of auth.

	* src/ejabberd_service.erl: Added an option to disable from attribute