@@ -1,3 +1,8 @@
+2007-07-18  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/ejabberd_s2s_out.erl: Make s2s connections more robust
+	* src/ejabberd_s2s.erl: Likewise
+
 2007-07-17  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/mod_configure.erl: Bugfix: Show only virtual host users
